# eyecandy

./: .gitignore  README.md
Plugins/EyeCandyAudio/: EyeCandyAudio.uplugin  README.md
Plugins/EyeCandyAudio/Source/EyeCandyAudio/: EyeCandyAudio.Build.cs
Plugins/EyeCandyAudio/Source/EyeCandyAudio/Private/: EyeCandyAudio.cpp
Plugins/EyeCandyAudio/Source/EyeCandyAudio/Public/: EyeCandyAudio.h
Plugins/EyeCandyBindings/: README.md
Source/EyeCandyAudio/: README.md
Source/EyeCandyAudio/cpp/: eyecandy_audio.h
Source/EyeCandyAudio/rust/: Cargo.toml
Source/EyeCandyAudio/rust/src/: core.rs  lib.rs
audio/: README.md
docs/: STATUS.md  build-notes.md
scripts/: eyecandy_setup.py  eyecandy_test_level.py  falconx.sh  falconx_status.ps1  launch_bonsai_binary.ps1  launch_editor_bonsai.ps1  sync_rust_dll.sh
